Use --enable-preview option by default.